--- a/package.json
+++ b/package.json
@@ -28,12 +28,10 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@playwright/test": "^1.57.0",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/react-webpack5": "^8.6.14",
-    "@storybook/test": "^8.6.14",
+    "@storybook/addon-essentials": "^10.1.4",
+    "@storybook/addon-interactions": "^10.1.4",
+    "@storybook/addon-links": "^10.1.4",
+    "@storybook/nextjs-vite": "^10.1.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -42,9 +40,10 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "postcss-loader": "^8.2.0",
-    "storybook": "^8.6.14",
+    "storybook": "^10.1.4",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^6.4.1"
   }
 }
