--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "ladle": "ladle serve",
+    "ladle:build": "ladle build",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui"
   },
@@ -18,9 +20,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.556.0",
-    "next": "16.0.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "14.2.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -28,22 +30,25 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@playwright/test": "^1.57.0",
-    "@storybook/addon-essentials": "^10.1.4",
-    "@storybook/addon-interactions": "^10.1.4",
-    "@storybook/addon-links": "^10.1.4",
-    "@storybook/nextjs-vite": "^10.1.4",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/nextjs": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@ladle/react": "4.1.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "css-loader": "^7.1.2",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.10",
     "postcss-loader": "^8.2.0",
-    "storybook": "^10.1.4",
+    "storybook": "^8.6.14",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "vite": "^6.4.1"
+    "typescript": "^5"
   }
 }
